# learning_project

./: .gitignore  README.md  Taskfile.yaml  main.py  pyproject.toml  requirements.txt
arjan_design_challenge/1_challenge_kiss/: app.py  arjan_solution.py  fruit.py  test_app.py  test_fruit.py
arjan_design_challenge/2_type_annotations/: after_annonations.py
fosdem_2025/cloud_native_dbs/: TiDB.md  another_yugabytes_2_talks.md  bolt_talk.md  ydb.md  yugabytes.md
fosdem_2025/devroom_data_analytics/: apache_superset.md  enhancing_airflow_for_data_analyitcs.md  graphQL_duckdb.md  graph_analytics_after_15_years.md  intro_to_iceberg.md  powerful JSON data type for ClickHouse.md  questdb.md  session_iceberg.md
fosdem_2025/devroom_opentelemetry/: Apache Flink and Prometheus.md  ClickHouse_telemetry.md  Prometheus Version 3.md  auto-instrumentations.md  open_telemetry.md
fosdem_2025/python_devroom/: distributed_in_python.md  pyscript.md
learning_argparse_python/: main.py
learning_asyncio/: README.md  example.py  main.py
learning_asyncio/corey_tutorials/: README.md  adding_sync_code.py  example_gather_and_completed.py
learning_asyncio/exercises/: 1.py
learning_click/: example_group.py  exercise.py  main.py  test_exercise.py
learning_click/data/: task.json
learning_click/finman/: app.txt
learning_dataclasses/: 1.py  main.py  read.md  resources.md
learning_dbt/: README_local_setup.md
learning_dbt/dbt_setup_with_airflow_eks_snowflake/: READme.md
learning_dbt/learning_project/: dbt_project.yml
learning_ddb_streams/: resources.md
learning_dms_operations_boto3/: dms_operations.py  hudi_glue.py  job_creator.py  lambda.py  ops_config.py  s3_operations.py  task_node.py
learning_docker/: READme_docker_commands.md
learning_docker/airflow_with_dbt/: Dockerfile
learning_docker/first_step/: Dockerfile
learning_duckdb/: resources.md
learning_dwh_concepts/: read.md  resources.md
learning_dwh_concepts/obt_modelling/: read.md
learning_file_formats/learning_csv/: 1.py  read.md  sample.json  sample.xml
learning_generators/learning_yield/: checking_yield.py
learning_github_actions/: core_concepts.md  jobs.md  triggers.md
learning_itertools/: fibonacci.py  filter_even_numbers.py  generate_prime_numbers.py  main.py  match_dependencies_poetry_pip3.py  pagination.py  prime_numer.py  read.md  read_file_chunks.py  reading_json.py  word_count.py
learning_itertools/data/: sample.txt  word_count.txt
learning_jinja/: README.md
learning_jinja/models/: html_model.py  json_creator_model.py
learning_jinja/templates/: input.html.j2  input.json.j2
learning_jinja/utils/: utiils.py
learning_kaggle_python/: download_file.py  download_spotify.py
learning_misc/: file.txt  load_csv_to_mysq_using_pandas.py  load_cvs_pgsql.py  read.md
learning_multithreading/basic_concepts/: multithreading.py  (+5 more)
learning_oops/: README.md  asserts_in_class.py  class_methods.py  global_variable_inside_class.py  init_learning.py  property.md  read.md  self.py  static_methods.py  test.py  what_is_use_of__init__py_file.md
learning_pathlib/: example.py  readme.md  tutorial.py
learning_poetry/: read.md
learning_pydantic/: README.md  exercise.py
learning_pyiceberg/: README.md  docker-compose.yml  resources.md
learning_pyproject/: README.md
learning_pyspark/: resources.md
learning_pytest/: README.md
learning_real_time_analytics/: clickstream.md  columnar_databases.md  event_driven_architecture_dabases_and_files.md  real-time-analytics VS batch_analytics VS streaming_analytics.md  real_time_analytics.md  real_time_analytics_db.md  real_time_architecture.md
learning_tableau/: QnA.md
learning_turtle_python/: simple.py
learning_unittesting/: check.py
learning_visualizations/: readme.md
oops/: asserts_in_class.py  class_methods.py  read.md
some_assignment/: Dockerfile  README.md  README_Solutions.md
(+160 files in other folders)
